hphp/test/zend/good/Zend/tests/bug43343.php.expectf

Fatal error: Namespace cannot be used as a classname in %s/bug43343.php on line 5
